# enhanced-rag-multi-db-ai-agent

./: .env.example  .gitignore  CLAUDE.md  MVP_DELIVERABLES.md  Makefile  OBESITY_AGENT_ARCHITECTURE.md  OBESITY_TREATMENT_AI_AGENT.md  README.md  RESEARCH_TOPICS.md  docker-compose.yml
.claude/agents/: data-graph-engineer.md  ml-engineer.md  mobile-frontend-specialist.md  python-expert-developer.md  solution-architect-devops.md  ui-ux-designer.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/endpoints/: patient.py
backend/app/core/: config.py  logging.py
backend/app/db/: mongodb.py
backend/app/models/: patient.py
backend/app/services/: medical_chat.py  medical_knowledge.py  patient_service.py
backend/tests/: TEST_ASSUMPTIONS.md  test_api_chat.py  test_chat_examples.py  test_conversation_integration.py  test_llm_factory.py  test_llm_providers.py  test_medical_knowledge.py  test_patient_api.py
docs/: CLAUDE.md  DEVELOPMENT_ROADMAP.md  OBESITY_TREATMENT_AI_AGENT.md  gemini.md  journey_paciente.md
glabitai-notebook-dev/: Dockerfile.jupyter  Dockerfile.test-data  README.md  docker-compose.yaml  requirements.txt
glabitai-notebook-dev/.virtual_documents/notebooks/: GLP1_Treatment_Agent_Demo.ipynb
glabitai-notebook-dev/glabitai/: __init__.py
glabitai-notebook-dev/notebooks/: GLP1_Treatment_Agent_Demo.ipynb  GLP1_Treatment_Agent_Refactored.ipynb  app.ipynb
glabitai-notebook-dev/scripts/: populate_test_data.py
glabitai_agent/: .gitignore
glabitai_agent/backend/: Makefile  pyproject.toml  pyrightconfig.json  run_server.py
glabitai_agent/backend/app/api/endpoints/: chat.py
glabitai_agent/backend/app/services/: __init__.py
glabitai_agent/backend/tests/: __init__.py  test_llm_providers.py
medical_research copy/: graph.py  service.py
rag-chatbot/: .env  .env.example  Makefile  docker-compose.yml
rag-chatbot/backend/: .env.example  .env.test  Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.py
rag-chatbot/backend/app/: __init__.py  config.py  main.py
rag-chatbot/backend/app/api/: __init__.py  dependencies.py  middleware.py
rag-chatbot/backend/app/api/endpoints/: __init__.py  chat.py
rag-chatbot/backend/app/api/models/: __init__.py  chat.py  documents.py  memory.py
rag-chatbot/backend/app/api/routes/: __init__.py  chat.py  debug.py  documents.py  memory.py
rag-chatbot/backend/app/core/: __init__.py  config.py  exceptions.py  llm_factory.py  llm_providers.py  logging.py  security.py
rag-chatbot/backend/app/services/: __init__.py  medical_chat.py  medical_knowledge.py
rag-chatbot/backend/app/services/agents/: __init__.py  base.py  factory.py  registry.py
rag-chatbot/backend/app/services/agents/clinical_agent/: README.md  graph.py  prompts.py  service.py  tools.py
rag-chatbot/backend/app/services/agents/medical_research/: README.md  graph.py  prompts.py
rag-chatbot/backend/app/services/agents/medical_research copy/: service.py
rag-chatbot/backend/app/services/agents/standard/: __init__.py  prompts.py  service.py
rag-chatbot/backend/app/services/agents/standard_graph/: __init__.py  graph.py  prompts.py  service.py
rag-chatbot/backend/app/services/agents/template_agent/: README.md  graph.py  prompts.py  service.py
rag-chatbot/backend/app/services/database/: __init__.py  chroma.py  mongo.py  neo4j.py  postgres.py  redis.py
rag-chatbot/backend/app/services/llm/: __init__.py  anthropic.py  base.py  factory.py  groq.py  openai.py
rag-chatbot/backend/app/services/memory/: __init__.py  base.py  episodic.py  manager.py  procedural.py  semantic.py  short_term.py
rag-chatbot/backend/app/utils/: __init__.py  document_processor.py  helpers.py  validators.py
rag-chatbot/backend/notebooks/: chat_workflow_demo.ipynb  redis_short_term_memory_demo.ipynb
rag-chatbot/backend/scripts/: test_clinical_agent.py  test_redis.py
rag-chatbot/backend/tests/: __init__.py  conftest.py  test_api_chat.py  test_clinical_agent.py  test_config.py  test_conversation_api.py  test_conversation_integration.py  test_llm_factory.py  test_llm_providers.py
rag-chatbot/backend/tests/integration/: __init__.py  test_chat_flow.py  test_memory_integration.py  test_redis_connection.py
rag-chatbot/backend/tests/unit/: __init__.py  test_document_processor.py  test_llm_service.py  test_memory_manager.py
rag-chatbot/frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
rag-chatbot/frontend/components/: __init__.py  chat.py  document_manager.py  graph_visualizer.py  memory_explorer.py
rag-chatbot/frontend/pages/: __init__.py  chat.py  document_manager.py  memory_explorer.py
rag-chatbot/frontend/utils/: __init__.py  api.py  formatters.py  logging.py
rag-chatbot/scripts/: add_filespaths.py  flatten_and_copy_files.py  init-mongo.js  init-neo4j.cypher  init-postgres.sql
scripts/: test_groq_api.py
