[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot Backend with Multi-DB Support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # Web Framework & Server
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.6",
    
    # Database & Storage
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.27.0",
    "redis>=5.0.0",
    "neo4j>=5.15.0",
    "chromadb>=0.4.22",
    
    # AI/ML & Language Models
    "langchain>=0.1.0",
    "langchain-community>=0.0.16",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.1",
    "langchain-huggingface>=0.0.5",
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.2",
    "huggingface_hub[hf_xet]>=0.20.0",
    
    # Document Processing
    "pymupdf>=1.23.8",
    "unstructured>=0.11.0",
    
    # Data Processing
    "pandas>=2.1.0",
    
    # Utilities & Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

dev = [
    "black>=23.11.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
rag-chatbot = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
